# -RestoCart-AI-

./: .env.example  .pre-commit-config.yaml  README.md  main.py
.agents/: README.md  project_architecture.md
.agents/workflows/: all.md  review.md  run.md  setup.md  test.md
backend/: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt  verify_agent.py
backend/api/v1/routes/: ai_router.py  order_router.py  product_route.py
backend/core/: config.py
backend/db/: seed.py  session.py
backend/models/: chat_model.py  order_item_model.py  order_model.py  product_model.py
backend/repositories/: chat_repo.py  product_repo.py
backend/schemas/: order_schema.py  product_schema.py
backend/services/: ai_service.py  order_service.py  product_service.py
backend/services/ai/: agent_service.py  retriever.py  tools.py
backend/tests/: test_basic.py
backend/utils/: chroma_init.py
frontend/: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/api/: api.js
frontend/src/components/: Navbar.jsx  ProductCard.jsx  SearchBar.jsx
frontend/src/context/: CartContext.jsx
frontend/src/pages/: Cart.jsx  ChatWidget.jsx  Home.jsx
services/: product_service.py
